# lesley

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
lesley/: __init__.py  lesley.py
