[build-system]
requires = ['setuptools >= 73.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'lesley'
version = '0.1.3'
authors = [
    {name = 'M Iqbal Tawakal', email = 'mit.iqi@gmail.com'}
]
description = 'Plot calendar heatmap in python using Altair. Inspired from July'
readme = 'README.md'
requires-python = '>=3.11'
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]
dependencies = [
    'numpy>=1.26.4',
    'seaborn>=0.13.2',
    'matplotlib>=3.9.0',
    'altair>=4.2.2'
]
keywords = [ 
    'heatmap',
    'visualisation',
    'calendar',
    'daily',
    'matplotlib',
    'github plot',
    'month plot',
    'date plot',
    'plot',
    'plotting'
]

[project.urls]
Repository = 'https://github.com/mitbal/lesley.git'
